Changements du 18 Mars 2021.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <input type="search" placeholder=" Marseille, France"/>
             <button class="marqueur_2">Rechercher</button>
         </div>
-        <div class="filtres">
+    <span>
         <span class="title_f">Filtres</span>
         <button class="i1"><span class="icone1"><i class="fas fa-money-bill-wave"></i></span>Économique</button>
         <button class="i1"><span class="icone2"><i class="fas fa-child"></i></span>Familial</button>
         <button class="i1"><span class="icone1"><i class="fas fa-heart"></i></span>Romantique</button>
         <button class="i1"><span class="icone1"><i class="fas fa-dog"></i></span>Animaux autorisés</button>
-        </div>
+    </span>
     
     <div class="result">
         <span class="information"><i class="fas fa-info"></i></span>Plus de 500 logements sont disponibles dans cette ville
@@ -45,7 +45,7 @@
 </section>
 <!--Ending of the top-->    
 
-<!--Beginning of accomodations-->
+<!--Accomodations' beginnning-->
 <section class="s2">
 <div id="ah1">
     <h2 id="logements">Hébergements à Marseille</h2>
@@ -93,16 +93,17 @@
 </div>
 
 <div class="c2">
+
 <div class="vignette">
-    <a href="#"><img src="images/hebergements/4_small/s_mer.jpg" alt="photo d'une chambre" class="image"/></a>
-    <div class="legende">Hôtel de la mer</div>
-    <div class="nuitee">Nuit à partir de <strong>45€</strong></div>
-    <span class="etoiles1">
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="far fa-star"></i>
-        <i class="far fa-star"></i>
+        <a href="#"><img src="images/hebergements/4_small/s_mer.jpg" alt="photo d'une chambre" class="image"/></a>
+        <div class="legende">Hôtel de la mer</div>
+        <div class="nuitee">Nuit à partir de <strong>45€</strong></div>
+        <span class="etoiles1">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
     </span>
 </div>
 
@@ -116,7 +117,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="far fa-star"></i>
-        </span>
+    </span>
 </div>
 
 <div class="vignette">
@@ -134,7 +135,7 @@
 </div>
 <div class="ap">Afficher Plus</div>
 </div>
-<!--accomodations'ending-->
+<!--Accomodations'ending-->
 
 <!--aside's beginning-->
 <aside>
