--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
 <!--Beginning of the top-->
-<section id="s1">
+<section class="s1">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
         <div id="recherche">
