--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_refonte_1503.css">
-    <link rel="stylesheet" href="style_css_resolution_moyenne"/>
+    <link rel="stylesheet" media="screen and (max-width: 1024px)"  href="style_css_resolution_moyenne"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/13299e9a17.js" crossorigin="anonymous"></script>
