--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <div id="ah1">
                 <h2 id="logements">Hébergements à Marseille</h2>
 
-                <div class="c1">
-
+                <div class="presentation">
                     <div class="vignette">
                         <a href="#"><img src="images/hebergements/4_small/s_cannebiere.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
@@ -96,9 +95,6 @@
                             <i class="far fa-star"></i>
                         </span>
                     </div>
-                </div>
-
-                <div class="c2">
 
                     <div class="vignette">
                         <a href="#"><img src="images/hebergements/4_small/s_mer.jpg" alt="photo d'une chambre"
@@ -142,6 +138,7 @@
                         </span>
                     </div>
                 </div>
+                
                 <div class="ap">Afficher Plus</div>
             </div>
             <!--Accomodations'ending-->
