--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="main">
         <header>
-            <div class="logo"> <a href="#"><img src="Reservia.svg" alt="logo reservia" /></a></div>
+            <div class="logo"><a href="#"><img src="Reservia.svg" alt="logo reservia" /></a></div>
             <nav>
                 <ul>
                     <li><a href="#logements">Hébergements</a></li>
@@ -31,15 +31,15 @@
             <div id="recherche">
                 <span class="marqueur_1"><i class="fas fa-map-marker-alt"></i></span>
                 <input type="search" placeholder=" Marseille, France"/>
-                <button class="marqueur_2">Rechercher</button>
+               <button class="marqueur_2">Rechercher</button>
             </div>
-            <span>
+            <div class="filters">
                 <span class="title_f">Filtres</span>
                 <button class="i1"><span class="icone1"><i class="fas fa-money-bill-wave"></i></span>Économique</button>
                 <button class="i1"><span class="icone2"><i class="fas fa-child"></i></span>Familial</button>
                 <button class="i1"><span class="icone1"><i class="fas fa-heart"></i></span>Romantique</button>
                 <button class="i1"><span class="icone1"><i class="fas fa-dog"></i></span>Animaux autorisés</button>
-            </span>
+            </div>
 
             <div class="result">
                 <span class="information"><i class="fas fa-info"></i></span>Plus de 500 logements sont disponibles dans
@@ -219,11 +219,11 @@
                     </div>
 
                     <div class="cal">
-                        <a href="#"><img src="images/activites/4_small/s_calanques.jpg" alt="photo des calanques"
-                                class="image2"></a>
-                        <h3>Parc National des Calanques</h3>
+                            <a href="#"><img src="images/activites/4_small/s_calanques.jpg" alt="photo des calanques"
+                                class="image2"></a> 
+                            <h3>Parc National des Calanques</h3>
                     </div>
-
+                    
                     <div>
                         <div class="ndg">
                             <a href="#"><img src="images/activites/4_small/s_ndg.jpg" alt="photo notre dame de la garde"
