modifications HTML et CSS du 28 mars 2021.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_refonte_1503.css">
-    <link rel="stylesheet" media="all and (min-width: 700px) and (max-width: 1350px)" href="style_css_resolution_moyenne.css">
+    <link rel="stylesheet" media="all and (max-width: 1640px)" href="style_resolution_haute.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/13299e9a17.js" crossorigin="anonymous"></script>
