Changements pour Responsive Design 30 Mars 2021.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li class="n1"><a href="#logements">Hébergements</a></li>
                     <li class="n2"><a href="#visites">Activités</a></li>
-                    <li class="n3"><a href="#"><strong>S'inscrire</strong></a><span></li>
+                    <li class="n3"><a href="#"><strong>S'inscrire</strong></a></li>
                 </ul>
                      
             </nav>
@@ -29,26 +29,34 @@
         </header>
 
         <!--Beginning of the top-->
-        <section class="s1">
+        <section id="s1">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p>En plein centre ville ou en pleine nature</p>
-            <div id="recherche">
+            <p class="pcvpn">En plein centre ville ou en pleine nature</p>
+            <div class="recherche1">
                 <span class="marqueur_1"><i class="fas fa-map-marker-alt"></i></span>
                 <input type="search" placeholder=" Marseille, France"/>
-               <button class="marqueur_2">Rechercher</button>
-            </div>
-            <div class="filters">
-                <span class="title_f">Filtres</span>
-                <button class="i1"><span class="icone1"><i class="fas fa-money-bill-wave"></i></span>Économique</button>
-                <button class="i1"><span class="icone2"><i class="fas fa-child"></i></span>Familial</button>
-                <button class="i1"><span class="icone1"><i class="fas fa-heart"></i></span>Romantique</button>
-                <button class="i1"><span class="icone1"><i class="fas fa-dog"></i></span>Animaux autorisés</button>
+                <button class="marqueur_2">Rechercher</button>
             </div>
 
-            <div class="result">
-                <span class="information"><i class="fas fa-info"></i></span>Plus de 500 logements sont disponibles dans
-                cette ville
+            <div class="recherche2" >
+                <span class="marqueur_1"><i class="fas fa-map-marker-alt"></i></span>
+                <input type="search" placeholder=" Marseille, France"/>
+                <button class="marqueur_2"><i class="fas fa-search"></i></button>
             </div>
+
+        <div id="filters">
+            <div class="title_f">Filtres</div>   
+            <div class="options_f">
+                <button class="i1"><span class="icone1"><i class="fas fa-money-bill-wave"></i></span>Économique</button>
+                <button class="i2"><span class="icone2"><i class="fas fa-child"></i></span>Familial</button>
+                <button class="i3"><span class="icone1"><i class="fas fa-heart"></i></span>Romantique</button>
+                <button class="i4"><span class="icone1"><i class="fas fa-dog"></i></span>Animaux autorisés</button>
+            </div>
+        </div>
+            <p class="results_info">
+                <span class="information"><i class="fas fa-info"></i></span> 
+                <span class="result">Plus de 500 logements sont disponibles dans cette ville</span> 
+            </p>
         </section>
         <!--Ending of the top-->
 
