Responsive Design modifs du 2 Avril 2021.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!--Ending of the top-->
 
         <!--Accomodations' beginnning-->
-        <section class="s2">
+        <section id="s2">
             <div id="ah1">
                 <h2 id="logements">Hébergements à Marseille</h2>
 
