Responsive Design haute-résolution du 2 Avril 2021.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_refonte_1503.css">
     <link rel="stylesheet" media="screen and (max-width: 1024px)"  href="style_basse_resolution.css"/>
+    <link rel="stylesheet" media="screen and (min-width: 1520px)"  href="style_resolution_haute.css"/>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/13299e9a17.js" crossorigin="anonymous"></script>
@@ -66,7 +68,7 @@
                 <h2 id="logements">Hébergements à Marseille</h2>
 
                 <div class="presentation">
-                    <div class="vignette">
+                    <div class="vignettes">
                         <a href="#"><img src="images/hebergements/4_small/s_cannebiere.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
                         <div class="legende">Auberge la Cannebière</div>
@@ -80,7 +82,7 @@
                         </span>
                     </div>
 
-                    <div class="vignette">
+                    <div class="vignettes">
                         <a href="#"><img src="images/hebergements/4_small/s_port.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
                         <div class="legende">Hôtel du port</div>
@@ -94,7 +96,7 @@
                         </span>
                     </div>
 
-                    <div class="vignette">
+                    <div class="vignettes">
                         <a href="#"><img src="images/hebergements/4_small/s_mouettes.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
                         <div class="legende">Hôtel Les mouettes</div>
@@ -108,7 +110,7 @@
                         </span>
                     </div>
 
-                    <div class="vignette">
+                    <div class="vignettes">
                         <a href="#"><img src="images/hebergements/4_small/s_mer.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
                         <div class="legende">Hôtel de la mer</div>
@@ -122,7 +124,7 @@
                         </span>
                     </div>
 
-                    <div class="vignette">
+                    <div class="vignettes">
                         <a href="#"><img src="images/hebergements/4_small/s_panier.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
                         <div class="legende">Auberge Le Panier</div>
@@ -136,7 +138,7 @@
                         </span>
                     </div>
 
-                    <div class="vignette">
+                    <div class="vignettes">
                         <a href="#"><img src="images/hebergements/4_small/s_amina.jpg" alt="photo d'une chambre"
                                 class="image" /></a>
                         <div class="legende">Hôtel chez Amina</div>
