Améliorations pour création bouton sign-up du 09 04 21.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <ul>
                     <li class="n1"><a href="#logements">Hébergements</a></li>
                     <li class="n2"><a href="#visites">Activités</a></li> 
-                    <li class="signup"><a class="sign_up" href="#">S'inscrire</a></li>
                 </ul>       
             </nav>
+        <button class="signup">S'inscrire</a></button>    
            
         </header>
 
