Responsive basse résolution 320px du 13 avril 2021.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_refonte_1503.css">
-    <link rel="stylesheet" media="screen and (max-width: 720px)" href="style_basse_resolution.css"/>
+    <link rel="stylesheet" media="all and (min-width:320px) and (max-width:720px)" href="style_basse_resolution.css"/>
     <!--<link rel="stylesheet" media="screen and (min-width: 1920px)" href="style_resolution_haute.css"/>-->
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
