--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_refonte_1503.css">
     <link rel="stylesheet" media="all and (min-width:320px) and (max-width:720px)" href="style_basse_resolution.css"/>
-    <!--<link rel="stylesheet" media="screen and (min-width: 1920px)" href="style_resolution_haute.css"/>-->
+    <link rel="stylesheet" media="all and (min-width: 720px) and (max-width: 1440px)" href="style_css_resolution_moyenne.css"/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
