--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_refonte_1503.css">
-    <link rel="stylesheet" media="all and (min-width:320px) and (max-width:720px)" href="style_basse_resolution.css"/>
-    <link rel="stylesheet" media="all and (min-width: 720px) and (max-width: 1250px)" href="style_css_resolution_moyenne.css"/>
+    <link rel="stylesheet" media="all and (min-width: 320px) and (max-width: 720px)" href="style_basse_resolution.css"/>
+    <link rel="stylesheet" media="all and (min-width: 680px) and (max-width: 1440px)" href="style_css_resolution_moyenne.css"/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet">
@@ -213,40 +213,40 @@
                     <article class="vp">
                         <a href="#"><img src="images/activites/4_small/s_vport.jpg" alt="photo du vieux port"
                                 class="image2"></a>
-                            <a href="#"><h3>Vieux port</h3></a>
+                            <a href="#"><h3 class="pnc">Vieux port</h3></a>
                     </article>
 
                     <div class="fpif">
                         <article class="fp">
                             <a href="#"><img src="images/activites/4_small/s_fp.jpg" alt="photo du fort de pomègues"
                                     class="image3"></a>
-                                <a href="#"><h3>Fort de Pomègues</h3></a>
+                                <a href="#"><h3 class="pnc">Fort de Pomègues</h3></a>
                         </article>
 
                         <article class="if">
                             <a href="#"><img src="images/activites/4_small/s_if.jpg" alt="photo des îles du frioul"
                                     class="image4"></a>
-                                <a href="#"><h3>Îles du Frioul</h3></a>
+                                <a href="#"><h3 class="pnc">Îles du Frioul</h3></a>
                         </article>
                     </div>
 
                     <article class="cal">
                             <a href="#"><img src="images/activites/4_small/s_calanques.jpg" alt="photo des calanques"
                                 class="image2"></a> 
-                                <a href="#"><h3>Parc National des Calanques</h3></a>
+                                <a href="#"><h3 class="pnc">Parc National des Calanques</h3></a>
                     </article>
   
                     <div class="ndgpl">
                         <article class="ndg">
                             <a href="#"><img src="images/activites/4_small/s_ndg.jpg" alt="photo notre dame de la garde"
                                     class="image5"></a>
-                            <a href="#"><h3>Notre-Dame-de-la-Garde</h3></a>
+                            <a href="#"><h3 class="pnc">Notre-Dame-de-la-Garde</h3></a>
                         </article>
 
                         <article class="pl">
                             <a href="#"><img src="images/activites/4_small/s_pl.jpg" alt="photo du parc longchamp"
                                     class="image5"></a>
-                            <a href="#"><h3>Parc Longchamp</h3></a>
+                            <a href="#"><h3 class="pnc">Parc Longchamp</h3></a>
                         </article>
                     </div>
                 </div>
