--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="n2"><a href="#visites">Activités</a></li> 
                 </ul>       
             </nav>
-        <button class="signup">S'inscrire</a></button>    
+        <button class="signup">S'inscrire</button>    
            
         </header>
 
@@ -37,13 +37,14 @@
                 <span class="marqueur_1"><i class="fas fa-map-marker-alt"></i></span>
                 <input type="search" id="ville_pays" name="ville_pays" placeholder="Marseille, France"/>
                 <button class="marqueur_2">Rechercher</button>
+                <button class="marqueur_3"><i class="fas fa-search"></i></button>
             </div>
 
-            <div class="recherche2" >
+            <!--<div class="recherche2" >
                 <span class="marqueur_1"><i class="fas fa-map-marker-alt"></i></span>
                 <input type="search" id="ville_pays" name="ville_pays" placeholder=" Marseille, France"/>
                 <button class="marqueur_2"><i class="fas fa-search"></i></button>
-            </div>
+            </div>-->
 
         <div id="filters">
             <div class="title_f">Filtres</div>   
@@ -187,7 +188,7 @@
                 </article>
 
                 <article class="p1">
-                    <a href="#"><img src="images/hebergements/4_small/s_bleu et blanc.jpg" alt="photo d'une chambre"
+                    <a href="#"><img src="images/hebergements/4_small/s_bleublanc.jpg" alt="photo d'une chambre"
                             class="image1" /></a>
                 <a href="#"><h3 class="legendebis">Hôtel Tout Bleu et <br />Blanc</h3></a>
                     <div class="nuitee2">Nuit à partir de <strong>71€</strong></div>
