Modifications haute, moyenne résolutions du 22 Avril 2021.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
             <!--aside's beginning-->
             <aside>
-                <div class="graphique">Les plus populaires<i class="fas fa-chart-line"></i></div>
+                <span class="graphique">Les plus populaires<i class="fas fa-chart-line"></i></span>
                 <article class="p1">
                     <a href="#"><img src="images/hebergements/4_small/s_matin.jpg" alt="photo d'une chambre"
                             class="image1" /></a>
